Checkstyle: VisibilityModifier